Fri Sep  1 13:12:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change find invocations to be portable, in docs/Makefile.am and
	  docs/mkdocs.pl.in

Fri Sep  1 12:57:59 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct sense of test for presence of doxygen.  How we never
	  noticed this before eludes me...

Fri Sep 01 11:20:03 BST 2000 Olly Betts

	* Moved some test helper functions from apitest.cc to testsuite.cc.
 
Fri Sep 01 10:06:00 BST 2000 Olly Betts

	* testutils.h and testsuite.h moved from common to testsuite.

Thu Aug 31 18:07:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the OmIndexerNode bits to handle primitive types
	  as well as records.  Primitive types are converted to/from
	  records as needed.

	* Added support for "ANY" type which is compatible with any
	  other.  (Used for "split" node, for example)

Thu Aug 31 17:50:00 BST 2000 Olly Betts

	* Headers to be used by include test are now found by parsing
	  Makefile.in-s which fixes several niggles.

Thu Aug 31 16:08:00 BST 2000 Olly Betts

	* Added tests for NEAR/PHRASE distributing over sub-expressions.

Thu Aug 31 15:43:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Sorted out some of the enum bits in OmIndexer

	* Check that the same node type isn't registered more than once.

	* Stop building of "nodetest" in indexer which depends on libomus

	* Building without remote backend should now work.

Thu Aug 31 15:36:00 BST 2000 Olly Betts

	* Should now distribute NEAR/PHRASE over sub-expressions - untested.

Thu Aug 31 11:41:00 BST 2000 Olly Betts

	* Window size for NEAR and PHRASE now defaults to number of
	  subqueries.

	* NEAR and PHRASE can now be built with OmQuery pair constructor.

Thu Aug 31 13:29:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmIndexer type-checking now seems to work.

Thu Aug 31 12:20:27 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
