@@ -68,6 +68,12 @@ mset_expect_order_begins(const OmMSet &A,
 			 om_docid d7 = 0, om_docid d8 = 0, om_docid d9 = 0,
 			 om_docid d10 = 0, om_docid d11 = 0, om_docid d12 = 0);
 
+bool doubles_are_equal_enough(double a, double b);
+
+void weights_are_equal_enough(double a, double b);
+
+void test_mset_order_equal(const OmMSet &mset1, const OmMSet &mset2);
+
 // ######################################################################
 // Useful test macros
 
